# Machi-Koro-Cpp

./: .gitignore  CMakeLists.txt
.devcontainer/: 010-drogon-build-cpp20-spdlog.patch  Dockerfile  devcontainer.json
.devcontainer/podman/: 010-drogon-build-cpp20-spdlog-doc.patch  010-drogon-build-debug-cpp20-spdlog-doc.patch  Dockerfile  devcontainer.json
.github/workflows/: build-devcontainer.yml
cmake/: sources.cmake
controllers/: create_game_controller.cpp  create_game_controller.h  in_memory_repository.cpp  in_memory_repository.h  increment_game_controller.cpp  increment_game_controller.h  roll_dice_controller.cpp  roll_dice_controller.h  utils.h
models/: architecture_market.cpp  architecture_market.h  bank.cpp  bank.h  dice.h  dice_impl.cpp  dice_impl.h  hand.cpp  hand.h  machikoro_game.cpp  machikoro_game.h  player.cpp  player.h
models/card/: amusement_park.cpp  amusement_park.h  apple_orchard.cpp  apple_orchard.h  bakery.cpp  bakery.h  building.cpp  building.h  business_center.cpp  business_center.h  cafe.cpp  cafe.h  card.cpp  card.h  cheese_factory.cpp  cheese_factory.h  convenient_store.cpp  convenient_store.h  family_restaurant.cpp  family_restaurant.h  forest.cpp  forest.h  fruit_and_vegetable_market.cpp  fruit_and_vegetable_market.h  furniture_factory.cpp  furniture_factory.h  landmark.cpp  landmark.h  mine.cpp  mine.h  radio_tower.cpp  radio_tower.h  ranch.cpp  ranch.h  (+10 more)
presenters/: increment_game_present.cpp  increment_game_present.h
usecases/: create_game_usecase.cpp  game_repository.h  increment_game.cpp  increment_game.h  presenter.h
(+10 files in other folders)
